--- a/style.css
+++ b/style.css
@@ -1,116 +1,254 @@
-nav{
-    background-color: pink;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+@media(min-width:401px){
+    nav{
+        background-color: pink;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-family: Arial, Helvetica, sans-serif;
+        
+    }
+    a{
+        padding-left: 39px;
+        color: black;
+        text-decoration: none;
+        
+    }
     
+    main{
+        display:  grid;
+        grid-template-rows: auto;
+        grid-template-columns: repeat(5,auto);
+        justify-items: stretch;
+        gap: 8px;
+    }
+    .facebook{
+        grid-column: 5/6;
+        grid-row: 1/2;
+    }
+    .twitter{
+        grid-column: 5/6;
+        grid-row: 2/3;
+    }
+    .anonmask{
+    grid-column: 5/6;
+    grid-row: 3/4;
+    }
+    .birthday{
+        grid-column: 1/3;
+        grid-row: 4/6;
+    }
+    .clownkid{
+        grid-column: 3/4;
+        grid-row: 4/6;
+    }
+    .clowngrandma{
+        grid-column: 4/5;
+        grid-row: 4/6;
+    }
+    .pinkgirl{
+        grid-column: 5/6;
+        grid-row: 4/6;
+    }
+    .musicalguy{
+        grid-column: 1/2;
+        grid-row: 6/8;
+    }
+    .supersale{
+        grid-column: 2/4;
+        grid-row: 6/7;
+    }
+    .candysale{
+        grid-column: 4/5;
+        grid-row: 6/7;
+    }
+    .greathats{
+        grid-column: 5/6;
+        grid-row: 6/7;
+    }
+    .santaclaus{
+        grid-column: 2/3;
+        grid-row: 7/9;
+    }
+    .classicpink{
+        grid-column: 3/5;
+        grid-row: 7/8;
+    }
+    .shipping{
+        grid-column: 5/6;
+        grid-row: 7/8;
+    }
+    .ghost{
+        grid-column: 3/4;
+        grid-row: 8/9;
+    }
+    .wolf{
+        grid-column: 4/5;
+        grid-row: 8/9;
+    }
+    .witches{
+        grid-column: 5/6;
+        grid-row: 8/9;
+    }
+    .blackmask{
+        grid-column: 1/2;
+        grid-row: 9/10;
+    }
+    .daymask{
+        grid-column: 2/4;
+        grid-row: 9/10;
+    }
+    .logo{
+        grid-column: 1/5;
+        grid-row: 1/4;
+    }
+    .props{
+        grid-column: 1/2;
+        grid-row: 8/9;
+    }
+    body{
+        border: 20px solid grey;
+    }
+    footer{
+        grid-column: 5/6;
+        grid-row: 9/10;
+        color: red;
+        align-items: stretch;
+        text-align: right;
+        display: none;
+    }
+    p{
+        grid-column: 5/6;
+        grid-row: 9/10;
+        color: red;
+        align-items: stretch;
+        text-align: right;
+        padding-top: 70px;
+        display: block;
+    }
 }
-a{
-    padding-left: 39px;
-    color: black;
-    text-decoration: none;
+@media(max-width:400px){
+    nav{
+        background-color: pink;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+    }
+    a{
+        padding-left: 39px;
+        color: black;
+        text-decoration: none;
+        
+    }
     
-}
-
-main{
-    display:  grid;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(5,auto);
-    justify-items: stretch;
-    gap: 8px;
-}
-.facebook{
+    main{
+        display:  grid;
+        grid-template-columns: repeat(5, 20%);
+        justify-items: stretch;
+        gap: 5px;
+        width: calc(100% - 20px);
+    }
+    .facebook{
+        grid-column: 1/2;
+        grid-row:5/6;
+    }
+    .twitter{
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
+    .anonmask{
     grid-column: 5/6;
-    grid-row: 1/2;
-}
-.twitter{
-    grid-column: 5/6;
-    grid-row: 2/3;
-}
-.anonmask{
-grid-column: 5/6;
-grid-row: 3/4;
-}
-.birthday{
-    grid-column: 1/3;
-    grid-row: 4/6;
-}
-.clownkid{
-    grid-column: 3/4;
-    grid-row: 4/6;
-}
-.clowngrandma{
-    grid-column: 4/5;
-    grid-row: 4/6;
-}
-.pinkgirl{
-    grid-column: 5/6;
-    grid-row: 4/6;
-}
-.musicalguy{
-    grid-column: 1/2;
-    grid-row: 6/8;
-}
-.supersale{
-    grid-column: 2/4;
-    grid-row: 6/7;
-}
-.candysale{
-    grid-column: 4/5;
-    grid-row: 6/7;
-}
-.greathats{
-    grid-column: 5/6;
-    grid-row: 6/7;
-}
-.santaclaus{
-    grid-column: 2/3;
-    grid-row: 7/9;
-}
-.classicpink{
-    grid-column: 3/5;
-    grid-row: 7/8;
-}
-.shipping{
-    grid-column: 5/6;
-    grid-row: 7/8;
-}
-.ghost{
-    grid-column: 3/4;
-    grid-row: 8/9;
-}
-.wolf{
-    grid-column: 4/5;
-    grid-row: 8/9;
-}
-.witches{
-    grid-column: 5/6;
-    grid-row: 8/9;
-}
-.blackmask{
-    grid-column: 1/2;
-    grid-row: 9/10;
-}
-.daymask{
-    grid-column: 2/4;
-    grid-row: 9/10;
-}
-.logo{
-    grid-column: 1/5;
-    grid-row: 1/4;
-}
-.props{
-    grid-column: 1/2;
-    grid-row: 8/9;
-}
-body{
-    border: 20px solid grey;
-}
-p{
-    grid-column: 5/6;
-    grid-row: 9/10;
-    color: red;
-    align-items: stretch;
-    text-align: right;
-    padding-top: 70px;
+    grid-row: 5/7;
+    }
+    .birthday{
+        grid-column: 1/3;
+        grid-row: 7/10;
+    }
+    .clownkid{
+        grid-column: 3/4;
+        grid-row: 7/10;
+    }
+    .clowngrandma{
+        grid-column: 4/5;
+        grid-row: 7/10;
+    }
+    .pinkgirl{
+        grid-column: 5/6;
+        grid-row: 7/10;
+    }
+    .musicalguy{
+        grid-column: 1/2;
+        grid-row: 10/13;
+    }
+    .supersale{
+        grid-column: 2/4;
+        grid-row: 10/12;
+    }
+    .candysale{
+        grid-column: 4/5;
+        grid-row: 10/12;
+    }
+    .greathats{
+        grid-column: 5/6;
+        grid-row: 10/12;
+    }
+    .santaclaus{
+        grid-column: 2/3;
+        grid-row: 12/14;
+    }
+    .classicpink{
+        grid-column: 3/5;
+        grid-row: 12/13;
+    }
+    .shipping{
+        grid-column: 5/6;
+        grid-row: 12/13;
+    }
+    .ghost{
+        grid-column: 3/4;
+        grid-row: 13/14;
+    }
+    .wolf{
+        grid-column: 4/5;
+        grid-row: 13/14;
+    }
+    .witches{
+        grid-column: 5/6;
+        grid-row: 13/14;
+    }
+    .blackmask{
+        grid-column: 2/3;
+        grid-row: 5/7;
+    }
+    .daymask{
+        grid-column: 3/5;
+        grid-row: 5/7;
+    }
+    .logo{
+        grid-column: 1/6;
+        grid-row: 1/5;
+    }
+    .props{
+        grid-column: 1/2;
+        grid-row: 13/14;
+    }
+    body{
+        border: 15px solid grey;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .item{
+        height:auto;
+        width:100%;
+        justify-items:end;
+    }
+    footer{
+        background-color: pink;
+        color: black;
+        margin-bottom: 0px;
+        display: block;
+    }
+    p{
+        display:none;
+    }
 }
